# models/vinculaciones.go
@@ -1,0 +1,14 @@
+package models
+
+type Vinculaciones struct {
+	Id                   int
+	Nombre               string
+	PersonaId            float64
+	Categoria            string
+	Dedicacion           string
+	NumeroHorasSemanales int
+	NumeroSemanas        int
+	Disponibilidad       int
+	ValorContratoFormato string
+	ProyectoCurricularId int16
+}
